--- a/_modules/qiskit_quantuminspire/qi_backend.html
+++ b/_modules/qiskit_quantuminspire/qi_backend.html
@@ -5,7 +5,7 @@
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../genindex.html" /><link rel="search" title="Search" href="../../search.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
-        <title>qiskit_quantuminspire.qi_backend - Qiskit-QuantumInspire 0.1.0.dev231 documentation</title>
+        <title>qiskit_quantuminspire.qi_backend - Qiskit-QuantumInspire 0.1.0.dev234 documentation</title>
       <link rel="stylesheet" type="text/css" href="../../_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="../../_static/styles/qiskit-sphinx-theme.css?v=8ff9dcb6" />
@@ -159,7 +159,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../../index.html"><div class="brand">Qiskit-QuantumInspire 0.1.0.dev231 documentation</div></a>
+      <a href="../../index.html"><div class="brand">Qiskit-QuantumInspire 0.1.0.dev234 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -183,7 +183,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../../index.html">
   
   
-  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.1.0.dev231 documentation</span>
+  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.1.0.dev234 documentation</span>
   
 </a>
 <form class="sidebar-search-container" method="get" action="../../search.html" role="search">
@@ -323,11 +323,16 @@
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">backend_type</span><span class="o">.</span><span class="n">name</span><span class="p">,</span> <span class="n">description</span><span class="o">=</span><span class="n">backend_type</span><span class="o">.</span><span class="n">description</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_id</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="n">backend_type</span><span class="o">.</span><span class="n">id</span>
 
+        <span class="bp">self</span><span class="o">.</span><span class="n">_max_shots</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="n">backend_type</span><span class="o">.</span><span class="n">max_number_of_shots</span>
+
+        <span class="c1"># Construct options</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_options</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_default_options</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">set_options</span><span class="p">(</span><span class="n">shots</span><span class="o">=</span><span class="n">backend_type</span><span class="o">.</span><span class="n">default_number_of_shots</span><span class="p">)</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">_max_shots</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="n">backend_type</span><span class="o">.</span><span class="n">max_number_of_shots</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">backend_type</span><span class="o">.</span><span class="n">supports_raw_data</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_options</span><span class="o">.</span><span class="n">set_validator</span><span class="p">(</span><span class="s2">&quot;memory&quot;</span><span class="p">,</span> <span class="p">[</span><span class="kc">False</span><span class="p">])</span>
 
+        <span class="c1"># Construct coupling map</span>
         <span class="n">native_gates</span> <span class="o">=</span> <span class="p">[</span><span class="n">gate</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">for</span> <span class="n">gate</span> <span class="ow">in</span> <span class="n">backend_type</span><span class="o">.</span><span class="n">gateset</span><span class="p">]</span>
         <span class="n">available_gates</span> <span class="o">=</span> <span class="p">[</span><span class="n">gate</span> <span class="k">for</span> <span class="n">gate</span> <span class="ow">in</span> <span class="n">native_gates</span> <span class="k">if</span> <span class="n">gate</span> <span class="ow">in</span> <span class="n">_ALL_SUPPORTED_GATES</span><span class="p">]</span>
         <span class="n">unknown_gates</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">native_gates</span><span class="p">)</span> <span class="o">-</span> <span class="nb">set</span><span class="p">(</span><span class="n">_ALL_SUPPORTED_GATES</span><span class="p">)</span> <span class="o">-</span> <span class="nb">set</span><span class="p">(</span><span class="n">_IGNORED_GATES</span><span class="p">)</span>
@@ -364,11 +369,14 @@
 
 <span class="sd">        shots: int: Number of shots for the job.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">options</span> <span class="o">=</span> <span class="n">Options</span><span class="p">(</span><span class="n">shots</span><span class="o">=</span><span class="mi">1024</span><span class="p">,</span> <span class="n">seed_simulator</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
+        <span class="n">options</span> <span class="o">=</span> <span class="n">Options</span><span class="p">(</span><span class="n">shots</span><span class="o">=</span><span class="mi">1024</span><span class="p">,</span> <span class="n">seed_simulator</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">memory</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
 
         <span class="c1"># Seed_simulator is included in options to enable use of BackendEstimatorV2 in Qiskit,</span>
         <span class="c1"># but is not actually supported by the backend so any other value than none raises an error.</span>
         <span class="n">options</span><span class="o">.</span><span class="n">set_validator</span><span class="p">(</span><span class="s2">&quot;seed_simulator&quot;</span><span class="p">,</span> <span class="p">[</span><span class="kc">None</span><span class="p">])</span>
+
+        <span class="n">options</span><span class="o">.</span><span class="n">set_validator</span><span class="p">(</span><span class="s2">&quot;shots&quot;</span><span class="p">,</span> <span class="nb">int</span><span class="p">)</span>
+        <span class="n">options</span><span class="o">.</span><span class="n">set_validator</span><span class="p">(</span><span class="s2">&quot;memory&quot;</span><span class="p">,</span> <span class="nb">bool</span><span class="p">)</span>
 
         <span class="k">return</span> <span class="n">options</span>
 
@@ -437,7 +445,7 @@
       
     </aside>
   </div>
-</div><script src="../../_static/documentation_options.js?v=843b7454"></script>
+</div><script src="../../_static/documentation_options.js?v=dc32eaea"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../_static/scripts/furo.js?v=5fa4622c"></script>
