--- a/_modules/qiskit_quantuminspire/qi_jobs.html
+++ b/_modules/qiskit_quantuminspire/qi_jobs.html
@@ -5,7 +5,7 @@
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../genindex.html" /><link rel="search" title="Search" href="../../search.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
-        <title>qiskit_quantuminspire.qi_jobs - Qiskit-QuantumInspire 0.1.0.dev231 documentation</title>
+        <title>qiskit_quantuminspire.qi_jobs - Qiskit-QuantumInspire 0.1.0.dev234 documentation</title>
       <link rel="stylesheet" type="text/css" href="../../_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="../../_static/styles/qiskit-sphinx-theme.css?v=8ff9dcb6" />
@@ -159,7 +159,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../../index.html"><div class="brand">Qiskit-QuantumInspire 0.1.0.dev231 documentation</div></a>
+      <a href="../../index.html"><div class="brand">Qiskit-QuantumInspire 0.1.0.dev234 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -183,7 +183,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../../index.html">
   
   
-  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.1.0.dev231 documentation</span>
+  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.1.0.dev234 documentation</span>
   
 </a>
 <form class="sidebar-search-container" method="get" action="../../search.html" role="search">
@@ -251,7 +251,7 @@
 <span class="kn">from</span> <span class="nn">dataclasses</span> <span class="kn">import</span> <span class="n">dataclass</span>
 <span class="kn">from</span> <span class="nn">functools</span> <span class="kn">import</span> <span class="n">cache</span>
 <span class="kn">from</span> <span class="nn">pathlib</span> <span class="kn">import</span> <span class="n">Path</span>
-<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Union</span><span class="p">,</span> <span class="n">cast</span>
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Union</span><span class="p">,</span> <span class="n">cast</span>
 
 <span class="kn">from</span> <span class="nn">compute_api_client</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">Algorithm</span><span class="p">,</span>
@@ -383,6 +383,7 @@
                     <span class="n">in_api_client</span><span class="p">,</span>
                     <span class="n">file</span><span class="o">.</span><span class="n">id</span><span class="p">,</span>
                     <span class="n">in_batch_job</span><span class="o">.</span><span class="n">id</span><span class="p">,</span>
+                    <span class="n">raw_data_enabled</span><span class="o">=</span><span class="n">cast</span><span class="p">(</span><span class="nb">bool</span><span class="p">,</span> <span class="n">options</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;memory&quot;</span><span class="p">)),</span>
                     <span class="n">number_of_shots</span><span class="o">=</span><span class="n">options</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;shots&quot;</span><span class="p">),</span>
                 <span class="p">)</span>
                 <span class="n">circuit_data</span><span class="o">.</span><span class="n">job_id</span> <span class="o">=</span> <span class="n">job</span><span class="o">.</span><span class="n">id</span>
@@ -440,10 +441,20 @@
         <span class="k">return</span> <span class="k">await</span> <span class="n">api_instance</span><span class="o">.</span><span class="n">create_batch_job_batch_jobs_post</span><span class="p">(</span><span class="n">obj</span><span class="p">)</span>
 
     <span class="k">async</span> <span class="k">def</span> <span class="nf">_create_job</span><span class="p">(</span>
-        <span class="bp">self</span><span class="p">,</span> <span class="n">api_client</span><span class="p">:</span> <span class="n">ApiClient</span><span class="p">,</span> <span class="n">file_id</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">batch_job_id</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">number_of_shots</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+        <span class="bp">self</span><span class="p">,</span>
+        <span class="n">api_client</span><span class="p">:</span> <span class="n">ApiClient</span><span class="p">,</span>
+        <span class="n">file_id</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span>
+        <span class="n">batch_job_id</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span>
+        <span class="n">raw_data_enabled</span><span class="p">:</span> <span class="nb">bool</span><span class="p">,</span>
+        <span class="n">number_of_shots</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Job</span><span class="p">:</span>
         <span class="n">api_instance</span> <span class="o">=</span> <span class="n">JobsApi</span><span class="p">(</span><span class="n">api_client</span><span class="p">)</span>
-        <span class="n">obj</span> <span class="o">=</span> <span class="n">JobIn</span><span class="p">(</span><span class="n">file_id</span><span class="o">=</span><span class="n">file_id</span><span class="p">,</span> <span class="n">batch_job_id</span><span class="o">=</span><span class="n">batch_job_id</span><span class="p">,</span> <span class="n">number_of_shots</span><span class="o">=</span><span class="n">number_of_shots</span><span class="p">)</span>
+        <span class="n">obj</span> <span class="o">=</span> <span class="n">JobIn</span><span class="p">(</span>
+            <span class="n">file_id</span><span class="o">=</span><span class="n">file_id</span><span class="p">,</span>
+            <span class="n">batch_job_id</span><span class="o">=</span><span class="n">batch_job_id</span><span class="p">,</span>
+            <span class="n">number_of_shots</span><span class="o">=</span><span class="n">number_of_shots</span><span class="p">,</span>
+            <span class="n">raw_data_enabled</span><span class="o">=</span><span class="n">raw_data_enabled</span><span class="p">,</span>
+        <span class="p">)</span>
         <span class="k">return</span> <span class="k">await</span> <span class="n">api_instance</span><span class="o">.</span><span class="n">create_job_jobs_post</span><span class="p">(</span><span class="n">obj</span><span class="p">)</span>
 
     <span class="k">async</span> <span class="k">def</span> <span class="nf">_enqueue_batch_job</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">api_client</span><span class="p">:</span> <span class="n">ApiClient</span><span class="p">,</span> <span class="n">batch_job_id</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">BatchJob</span><span class="p">:</span>
@@ -591,15 +602,13 @@
             <span class="n">circuit_name</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="o">.</span><span class="n">name</span>
 
             <span class="k">if</span> <span class="n">qi_result</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
-                <span class="n">experiment_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_experiment_result</span><span class="p">(</span><span class="n">circuit_name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">)</span>
+                <span class="n">experiment_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_create_empty_experiment_result</span><span class="p">(</span><span class="n">circuit_name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">)</span>
                 <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">experiment_result</span><span class="p">)</span>
                 <span class="k">continue</span>
 
-            <span class="n">experiment_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_experiment_result</span><span class="p">(</span>
+            <span class="n">experiment_result</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_create_experiment_result</span><span class="p">(</span>
                 <span class="n">circuit_name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">,</span>
-                <span class="n">shots</span><span class="o">=</span><span class="n">qi_result</span><span class="o">.</span><span class="n">shots_done</span><span class="p">,</span>
-                <span class="n">counts</span><span class="o">=</span><span class="p">{</span><span class="nb">hex</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="mi">2</span><span class="p">)):</span> <span class="n">value</span> <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">qi_result</span><span class="o">.</span><span class="n">results</span><span class="o">.</span><span class="n">items</span><span class="p">()},</span>
-                <span class="n">experiment_success</span><span class="o">=</span><span class="n">qi_result</span><span class="o">.</span><span class="n">shots_done</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">,</span>
+                <span class="n">result</span><span class="o">=</span><span class="n">qi_result</span><span class="p">,</span>
             <span class="p">)</span>
             <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">experiment_result</span><span class="p">)</span>
             <span class="n">batch_job_success</span><span class="p">[</span><span class="n">idx</span><span class="p">]</span> <span class="o">=</span> <span class="n">qi_result</span><span class="o">.</span><span class="n">shots_done</span> <span class="o">&gt;</span> <span class="mi">0</span>
@@ -615,20 +624,32 @@
         <span class="k">return</span> <span class="n">result</span>
 
     <span class="nd">@staticmethod</span>
-    <span class="k">def</span> <span class="nf">_get_experiment_result</span><span class="p">(</span>
+    <span class="k">def</span> <span class="nf">_create_experiment_result</span><span class="p">(</span>
         <span class="n">circuit_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
-        <span class="n">shots</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span>
-        <span class="n">counts</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">int</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
-        <span class="n">experiment_success</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
+        <span class="n">result</span><span class="p">:</span> <span class="n">RawJobResult</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ExperimentResult</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create an ExperimentResult instance based on RawJobResult parameters.&quot;&quot;&quot;</span>
+        <span class="n">counts</span> <span class="o">=</span> <span class="p">{</span><span class="nb">hex</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="mi">2</span><span class="p">)):</span> <span class="n">value</span> <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">result</span><span class="o">.</span><span class="n">results</span><span class="o">.</span><span class="n">items</span><span class="p">()}</span>
+        <span class="n">memory</span> <span class="o">=</span> <span class="p">[</span><span class="nb">hex</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">measurement</span><span class="p">,</span> <span class="mi">2</span><span class="p">))</span> <span class="k">for</span> <span class="n">measurement</span> <span class="ow">in</span> <span class="n">result</span><span class="o">.</span><span class="n">raw_data</span><span class="p">]</span> <span class="k">if</span> <span class="n">result</span><span class="o">.</span><span class="n">raw_data</span> <span class="k">else</span> <span class="kc">None</span>
+
         <span class="n">experiment_data</span> <span class="o">=</span> <span class="n">ExperimentResultData</span><span class="p">(</span>
             <span class="n">counts</span><span class="o">=</span><span class="p">{}</span> <span class="k">if</span> <span class="n">counts</span> <span class="ow">is</span> <span class="kc">None</span> <span class="k">else</span> <span class="n">counts</span><span class="p">,</span>
+            <span class="n">memory</span><span class="o">=</span><span class="n">memory</span><span class="p">,</span>
         <span class="p">)</span>
         <span class="k">return</span> <span class="n">ExperimentResult</span><span class="p">(</span>
-            <span class="n">shots</span><span class="o">=</span><span class="n">shots</span><span class="p">,</span>
-            <span class="n">success</span><span class="o">=</span><span class="n">experiment_success</span><span class="p">,</span>
+            <span class="n">shots</span><span class="o">=</span><span class="n">result</span><span class="o">.</span><span class="n">shots_done</span><span class="p">,</span>
+            <span class="n">success</span><span class="o">=</span><span class="n">result</span><span class="o">.</span><span class="n">shots_done</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">,</span>
             <span class="n">data</span><span class="o">=</span><span class="n">experiment_data</span><span class="p">,</span>
+            <span class="n">header</span><span class="o">=</span><span class="n">QobjExperimentHeader</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">),</span>
+        <span class="p">)</span>
+
+    <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">_create_empty_experiment_result</span><span class="p">(</span><span class="n">circuit_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ExperimentResult</span><span class="p">:</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Create an empty ExperimentResult instance.&quot;&quot;&quot;</span>
+        <span class="k">return</span> <span class="n">ExperimentResult</span><span class="p">(</span>
+            <span class="n">shots</span><span class="o">=</span><span class="mi">0</span><span class="p">,</span>
+            <span class="n">success</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
+            <span class="n">data</span><span class="o">=</span><span class="n">ExperimentResultData</span><span class="p">(</span><span class="n">counts</span><span class="o">=</span><span class="p">{}),</span>
             <span class="n">header</span><span class="o">=</span><span class="n">QobjExperimentHeader</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">),</span>
         <span class="p">)</span></div>
 
@@ -664,7 +685,7 @@
       
     </aside>
   </div>
-</div><script src="../../_static/documentation_options.js?v=843b7454"></script>
+</div><script src="../../_static/documentation_options.js?v=dc32eaea"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../_static/scripts/furo.js?v=5fa4622c"></script>
