--- a/_modules/qiskit_quantuminspire/qi_backend.html
+++ b/_modules/qiskit_quantuminspire/qi_backend.html
@@ -252,7 +252,7 @@
 <span class="kn">from</span> <span class="nn">pprint</span> <span class="kn">import</span> <span class="n">PrettyPrinter</span>
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Union</span>
 
-<span class="kn">from</span> <span class="nn">compute_api_client</span> <span class="kn">import</span> <span class="n">BackendType</span>
+<span class="kn">from</span> <span class="nn">compute_api_client</span> <span class="kn">import</span> <span class="n">ApiClient</span><span class="p">,</span> <span class="n">BackendStatus</span><span class="p">,</span> <span class="n">BackendType</span><span class="p">,</span> <span class="n">BackendTypesApi</span>
 <span class="kn">from</span> <span class="nn">qiskit.circuit</span> <span class="kn">import</span> <span class="n">Instruction</span><span class="p">,</span> <span class="n">Measure</span><span class="p">,</span> <span class="n">QuantumCircuit</span>
 <span class="kn">from</span> <span class="nn">qiskit.circuit.library</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">CCXGate</span><span class="p">,</span>
@@ -270,8 +270,9 @@
 <span class="kn">from</span> <span class="nn">qiskit.providers.options</span> <span class="kn">import</span> <span class="n">Options</span>
 <span class="kn">from</span> <span class="nn">qiskit.transpiler</span> <span class="kn">import</span> <span class="n">CouplingMap</span><span class="p">,</span> <span class="n">Target</span>
 
+<span class="kn">from</span> <span class="nn">qiskit_quantuminspire.api.client</span> <span class="kn">import</span> <span class="n">config</span>
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.qi_jobs</span> <span class="kn">import</span> <span class="n">QIJob</span>
-<span class="kn">from</span> <span class="nn">qiskit_quantuminspire.utils</span> <span class="kn">import</span> <span class="n">is_coupling_map_complete</span>
+<span class="kn">from</span> <span class="nn">qiskit_quantuminspire.utils</span> <span class="kn">import</span> <span class="n">is_coupling_map_complete</span><span class="p">,</span> <span class="n">run_async</span>
 
 <span class="c1"># Used for parameterizing Qiskit gates in the gate mapping</span>
 <span class="n">_THETA</span> <span class="o">=</span> <span class="n">Parameter</span><span class="p">(</span><span class="s2">&quot;ϴ&quot;</span><span class="p">)</span>
@@ -396,6 +397,20 @@
     <span class="k">def</span> <span class="nf">id</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_id</span>
 
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">status</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">BackendStatus</span><span class="p">:</span>
+        <span class="n">backend_type</span><span class="p">:</span> <span class="n">BackendType</span> <span class="o">=</span> <span class="n">run_async</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_get_backend_type</span><span class="p">())</span>
+        <span class="k">return</span> <span class="n">backend_type</span><span class="o">.</span><span class="n">status</span>
+
+    <span class="k">async</span> <span class="k">def</span> <span class="nf">_get_backend_type</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">BackendType</span><span class="p">:</span>
+        <span class="k">async</span> <span class="k">with</span> <span class="n">ApiClient</span><span class="p">(</span><span class="n">config</span><span class="p">())</span> <span class="k">as</span> <span class="n">client</span><span class="p">:</span>
+            <span class="n">backend_types_api</span> <span class="o">=</span> <span class="n">BackendTypesApi</span><span class="p">(</span><span class="n">client</span><span class="p">)</span>
+            <span class="k">return</span> <span class="k">await</span> <span class="n">backend_types_api</span><span class="o">.</span><span class="n">read_backend_type_backend_types_id_get</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_id</span><span class="p">)</span>
+
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">available</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+        <span class="k">return</span> <span class="nb">bool</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">status</span> <span class="o">!=</span> <span class="n">BackendStatus</span><span class="o">.</span><span class="n">OFFLINE</span><span class="p">)</span>
+
 <div class="viewcode-block" id="QIBackend.run">
 <a class="viewcode-back" href="../../api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBackend.run">[docs]</a>
     <span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">run_input</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">QuantumCircuit</span><span class="p">,</span> <span class="n">List</span><span class="p">[</span><span class="n">QuantumCircuit</span><span class="p">]],</span> <span class="o">**</span><span class="n">options</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">QIJob</span><span class="p">:</span>
@@ -407,6 +422,8 @@
 <span class="sd">        Returns:</span>
 <span class="sd">            QIJob: A reference to the batch job that was submitted.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">available</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2"> is </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">status</span><span class="si">}</span><span class="s2">, jobs can&#39;t be submitted&quot;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">set_options</span><span class="p">(</span><span class="o">**</span><span class="n">options</span><span class="p">)</span>
         <span class="n">job</span> <span class="o">=</span> <span class="n">QIJob</span><span class="p">(</span><span class="n">run_input</span><span class="o">=</span><span class="n">run_input</span><span class="p">,</span> <span class="n">backend</span><span class="o">=</span><span class="bp">self</span><span class="p">)</span>
         <span class="n">job</span><span class="o">.</span><span class="n">submit</span><span class="p">()</span>
