--- a/genindex.html
+++ b/genindex.html
@@ -260,15 +260,17 @@
 </li>
         <li><a href="api/qiskit_quantuminspire.api.html#qiskit_quantuminspire.api.settings.ApiSettings">ApiSettings (class in qiskit_quantuminspire.api.settings)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/qiskit_quantuminspire.api.html#qiskit_quantuminspire.api.client.Configuration.auth_settings">auth_settings() (qiskit_quantuminspire.api.client.Configuration method)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/qiskit_quantuminspire.api.html#qiskit_quantuminspire.api.authentication.AuthorisationError">AuthorisationError</a>
 </li>
         <li><a href="api/qiskit_quantuminspire.api.html#qiskit_quantuminspire.api.settings.ApiSettings.auths">auths (qiskit_quantuminspire.api.settings.ApiSettings attribute)</a>
 </li>
         <li><a href="api/qiskit_quantuminspire.api.html#qiskit_quantuminspire.api.settings.AuthSettings">AuthSettings (class in qiskit_quantuminspire.api.settings)</a>
+</li>
+        <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBackend.available">available (qiskit_quantuminspire.qi_backend.QIBackend property)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -616,6 +618,8 @@
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.QIJob.serialize">serialize() (qiskit_quantuminspire.qi_jobs.QIJob method)</a>
 </li>
         <li><a href="api/qiskit_quantuminspire.api.html#qiskit_quantuminspire.api.pagination.PageInterface.size">size (qiskit_quantuminspire.api.pagination.PageInterface attribute)</a>
+</li>
+        <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBackend.status">status (qiskit_quantuminspire.qi_backend.QIBackend property)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
