--- a/pr-preview/pr-111/_modules/qiskit_quantuminspire/hybrid/hybrid_job.html
+++ b/pr-preview/pr-111/_modules/qiskit_quantuminspire/hybrid/hybrid_job.html
@@ -272,7 +272,8 @@
 <span class="k">class</span> <span class="nc">QIHybridJob</span><span class="p">(</span><span class="n">QIBaseJob</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Used internally as a Qiskit job for hybrid algorithms that are fully executed on the Quantum Inspire platform.</span>
 
-<span class="sd">    Not to be used in user code.&quot;&quot;&quot;</span>
+<span class="sd">    Not to be used in user code.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span>
         <span class="bp">self</span><span class="p">,</span>
@@ -287,7 +288,7 @@
 <div class="viewcode-block" id="QIHybridJob.status">
 <a class="viewcode-back" href="../../../api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.hybrid_job.QIHybridJob.status">[docs]</a>
     <span class="k">def</span> <span class="nf">status</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">JobStatus</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Quantum jobs in a hybrid environment are executed synchronously&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Quantum jobs in a hybrid environment are executed synchronously.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">JobStatus</span><span class="o">.</span><span class="n">DONE</span></div>
 
 
