Deploy preview for PR 111 🛫

--- a/pr-preview/pr-111/getting_started/submitting.html
+++ b/pr-preview/pr-111/getting_started/submitting.html
@@ -3,7 +3,7 @@
   <head><meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="index" title="Index" href="../genindex.html" /><link rel="search" title="Search" href="../search.html" /><link rel="next" title="Hybrid Computing" href="../hybrid/index.html" /><link rel="prev" title="Installation and login" href="installation.html" />
+<link rel="index" title="Index" href="../genindex.html" /><link rel="search" title="Search" href="../search.html" /><link rel="next" title="Hybrid Algorithms" href="../hybrid/index.html" /><link rel="prev" title="Installation and login" href="installation.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
         <title>How to: Submit a circuit - Qiskit-QuantumInspire 0.3.0 documentation</title>
@@ -338,7 +338,7 @@ circuits to use only supported gates:</p>
                 <div class="context">
                   <span>Next</span>
                 </div>
-                <div class="title">Hybrid Computing</div>
+                <div class="title">Hybrid Algorithms</div>
               </div>
               <svg class="furo-related-icon"><use href="#svg-arrow-right"></use></svg>
             </a>
