--- a/pr-preview/pr-111/hybrid/basics.html
+++ b/pr-preview/pr-111/hybrid/basics.html
@@ -3,7 +3,7 @@
   <head><meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="index" title="Index" href="../genindex.html" /><link rel="search" title="Search" href="../search.html" /><link rel="next" title="Leveraging Qiskit" href="leveraging_qiskit.html" /><link rel="prev" title="Hybrid Computing" href="index.html" />
+<link rel="index" title="Index" href="../genindex.html" /><link rel="search" title="Search" href="../search.html" /><link rel="next" title="Leveraging Qiskit" href="leveraging_qiskit.html" /><link rel="prev" title="Hybrid Algorithms" href="index.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
         <title>Basics - Qiskit-QuantumInspire 0.3.0 documentation</title>
@@ -343,7 +343,7 @@
                   <span>Previous</span>
                 </div>
                 
-                <div class="title">Hybrid Computing</div>
+                <div class="title">Hybrid Algorithms</div>
                 
               </div>
             </a>
