--- a/_modules/qiskit_quantuminspire/hybrid/quantum_interface.html
+++ b/_modules/qiskit_quantuminspire/hybrid/quantum_interface.html
@@ -269,7 +269,6 @@
 <span class="kn">from</span> <span class="nn">abc</span> <span class="kn">import</span> <span class="n">ABC</span><span class="p">,</span> <span class="n">abstractmethod</span>
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">List</span>
 
-<span class="kn">from</span> <span class="nn">compute_api_client.models.backend_type</span> <span class="kn">import</span> <span class="n">BackendType</span>
 <span class="kn">from</span> <span class="nn">pydantic</span> <span class="kn">import</span> <span class="n">BaseModel</span>
 
 
@@ -293,7 +292,7 @@
     <span class="c1"># Too few public methods (1/2) (too-few-public-methods)</span>
 
     <span class="n">results</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Any</span><span class="p">]</span>
-    <span class="n">backend_type</span><span class="p">:</span> <span class="n">BackendType</span>
+    <span class="n">backend_type</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">]</span>
 
 <div class="viewcode-block" id="QuantumInterface.execute_circuit">
 <a class="viewcode-back" href="../../../api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.QuantumInterface.execute_circuit">[docs]</a>
