deploy: dca62b1990e687b4a54916828313371e7f2e3bcb

--- a/_modules/qiskit_quantuminspire/hybrid/hybrid_job.html
+++ b/_modules/qiskit_quantuminspire/hybrid/hybrid_job.html
@@ -257,13 +257,13 @@
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Union</span><span class="p">,</span> <span class="n">cast</span>
 
 <span class="kn">from</span> <span class="nn">compute_api_client</span> <span class="kn">import</span> <span class="n">Result</span> <span class="k">as</span> <span class="n">RawJobResult</span>
+<span class="kn">from</span> <span class="nn">qi2_shared.hybrid.quantum_interface</span> <span class="kn">import</span> <span class="n">QuantumInterface</span>
 <span class="kn">from</span> <span class="nn">qiskit</span> <span class="kn">import</span> <span class="n">QuantumCircuit</span><span class="p">,</span> <span class="n">transpile</span>
 <span class="kn">from</span> <span class="nn">qiskit.providers.backend</span> <span class="kn">import</span> <span class="n">BackendV2</span>
 <span class="kn">from</span> <span class="nn">qiskit.providers.jobstatus</span> <span class="kn">import</span> <span class="n">JobStatus</span>
 <span class="kn">from</span> <span class="nn">qiskit.result.result</span> <span class="kn">import</span> <span class="n">Result</span>
 
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire</span> <span class="kn">import</span> <span class="n">cqasm</span>
-<span class="kn">from</span> <span class="nn">qiskit_quantuminspire.hybrid.quantum_interface</span> <span class="kn">import</span> <span class="n">QuantumInterface</span>
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.qi_jobs</span> <span class="kn">import</span> <span class="n">QIBaseJob</span>
 
 
