--- a/_modules/qiskit_quantuminspire/hybrid/hybrid_backend.html
+++ b/_modules/qiskit_quantuminspire/hybrid/hybrid_backend.html
@@ -255,11 +255,11 @@
 <span></span><span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Union</span>
 
 <span class="kn">from</span> <span class="nn">compute_api_client</span> <span class="kn">import</span> <span class="n">BackendType</span>
+<span class="kn">from</span> <span class="nn">qi2_shared.hybrid.quantum_interface</span> <span class="kn">import</span> <span class="n">QuantumInterface</span>
 <span class="kn">from</span> <span class="nn">qiskit</span> <span class="kn">import</span> <span class="n">QuantumCircuit</span>
 <span class="kn">from</span> <span class="nn">qiskit.providers.models.backendstatus</span> <span class="kn">import</span> <span class="n">BackendStatus</span>
 
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.hybrid.hybrid_job</span> <span class="kn">import</span> <span class="n">QIHybridJob</span>
-<span class="kn">from</span> <span class="nn">qiskit_quantuminspire.hybrid.quantum_interface</span> <span class="kn">import</span> <span class="n">QuantumInterface</span>
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.qi_backend</span> <span class="kn">import</span> <span class="n">QIBaseBackend</span>
 
 
