--- a/genindex.html
+++ b/genindex.html
@@ -253,7 +253,7 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#Q"><strong>Q</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#Q"><strong>Q</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a></div>
 </section>
 <section id="A" class="genindex-section">
   <h2>A</h2>
@@ -269,8 +269,6 @@
   <h2>B</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.QuantumInterface.backend_type">backend_type (qiskit_quantuminspire.hybrid.quantum_interface.QuantumInterface attribute)</a>
-</li>
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.base_provider.BaseProvider.backends">backends() (qiskit_quantuminspire.base_provider.BaseProvider method)</a>
 
         <ul>
@@ -310,20 +308,6 @@
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.cqasm.dumps">dumps() (in module qiskit_quantuminspire.cqasm)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="E" class="genindex-section">
-  <h2>E</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.QuantumInterface.execute_circuit">execute_circuit() (qiskit_quantuminspire.hybrid.quantum_interface.QuantumInterface method)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult">ExecuteCircuitResult (class in qiskit_quantuminspire.hybrid.quantum_interface)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -375,8 +359,6 @@
 </li>
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBaseBackend.max_shots">max_shots (qiskit_quantuminspire.qi_backend.QIBaseBackend property)</a>
 </li>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult.model_config">model_config (qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult attribute)</a>
-</li>
         <li>
     module
 
@@ -392,8 +374,6 @@
           <li><a href="api/qiskit_quantuminspire.hybrid.html#module-qiskit_quantuminspire.hybrid.hybrid_backend">qiskit_quantuminspire.hybrid.hybrid_backend</a>
 </li>
           <li><a href="api/qiskit_quantuminspire.hybrid.html#module-qiskit_quantuminspire.hybrid.hybrid_job">qiskit_quantuminspire.hybrid.hybrid_job</a>
-</li>
-          <li><a href="api/qiskit_quantuminspire.hybrid.html#module-qiskit_quantuminspire.hybrid.quantum_interface">qiskit_quantuminspire.hybrid.quantum_interface</a>
 </li>
           <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.qi_backend">qiskit_quantuminspire.qi_backend</a>
 </li>
@@ -447,6 +427,8 @@
           <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.cqasm">module</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     qiskit_quantuminspire.hybrid
 
@@ -454,8 +436,6 @@
           <li><a href="api/qiskit_quantuminspire.hybrid.html#module-qiskit_quantuminspire.hybrid">module</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     qiskit_quantuminspire.hybrid.hybrid_backend
 
@@ -468,13 +448,6 @@
 
         <ul>
           <li><a href="api/qiskit_quantuminspire.hybrid.html#module-qiskit_quantuminspire.hybrid.hybrid_job">module</a>
-</li>
-        </ul></li>
-        <li>
-    qiskit_quantuminspire.hybrid.quantum_interface
-
-        <ul>
-          <li><a href="api/qiskit_quantuminspire.hybrid.html#module-qiskit_quantuminspire.hybrid.quantum_interface">module</a>
 </li>
         </ul></li>
         <li>
@@ -505,8 +478,6 @@
           <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.utils">module</a>
 </li>
         </ul></li>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.QuantumInterface">QuantumInterface (class in qiskit_quantuminspire.hybrid.quantum_interface)</a>
-</li>
     </ul></td>
   </tr></table>
 </section>
@@ -521,14 +492,8 @@
           <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.QIJob.result">(qiskit_quantuminspire.qi_jobs.QIJob method)</a>
 </li>
         </ul></li>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult.results">results (qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult attribute)</a>
-
-        <ul>
-          <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.QuantumInterface.results">(qiskit_quantuminspire.hybrid.quantum_interface.QuantumInterface attribute)</a>
+        <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.CircuitExecutionData.results">results (qiskit_quantuminspire.qi_jobs.CircuitExecutionData attribute)</a>
 </li>
-          <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.CircuitExecutionData.results">(qiskit_quantuminspire.qi_jobs.CircuitExecutionData attribute)</a>
-</li>
-        </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.hybrid_backend.QIHybridBackend.run">run() (qiskit_quantuminspire.hybrid.hybrid_backend.QIHybridBackend method)</a>
@@ -548,10 +513,6 @@
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.QIJob.serialize">serialize() (qiskit_quantuminspire.qi_jobs.QIJob method)</a>
-</li>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult.shots_done">shots_done (qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult attribute)</a>
-</li>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult.shots_requested">shots_requested (qiskit_quantuminspire.hybrid.quantum_interface.ExecuteCircuitResult attribute)</a>
 </li>
         <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.hybrid_backend.QIHybridBackend.status">status (qiskit_quantuminspire.hybrid.hybrid_backend.QIHybridBackend property)</a>
 
