deploy: 6fcc614a9285d8bc0fd11614502fd6e149b6f9e5

--- a/_modules/qiskit_quantuminspire/qi_jobs.html
+++ b/_modules/qiskit_quantuminspire/qi_jobs.html
@@ -547,6 +547,7 @@
             <span class="n">language_id</span><span class="o">=</span><span class="n">language_id</span><span class="p">,</span>
             <span class="n">compile_stage</span><span class="o">=</span><span class="n">CompileStage</span><span class="o">.</span><span class="n">NONE</span><span class="p">,</span>
             <span class="n">compile_properties</span><span class="o">=</span><span class="p">{},</span>
+            <span class="n">name</span><span class="o">=</span><span class="n">circuit</span><span class="o">.</span><span class="n">name</span><span class="p">,</span>
         <span class="p">)</span>
         <span class="k">return</span> <span class="k">await</span> <span class="n">api_instance</span><span class="o">.</span><span class="n">create_file_files_post</span><span class="p">(</span><span class="n">obj</span><span class="p">)</span>
 
