--- a/_modules/qiskit_quantuminspire/qi_jobs.html
+++ b/_modules/qiskit_quantuminspire/qi_jobs.html
@@ -296,6 +296,7 @@
 <span class="kn">from</span> <span class="nn">qi2_shared.client</span> <span class="kn">import</span> <span class="n">config</span>
 <span class="kn">from</span> <span class="nn">qi2_shared.pagination</span> <span class="kn">import</span> <span class="n">PageReader</span>
 <span class="kn">from</span> <span class="nn">qi2_shared.settings</span> <span class="kn">import</span> <span class="n">ApiSettings</span>
+<span class="kn">from</span> <span class="nn">qi2_shared.utils</span> <span class="kn">import</span> <span class="n">run_async</span>
 <span class="kn">from</span> <span class="nn">qiskit</span> <span class="kn">import</span> <span class="n">qpy</span>
 <span class="kn">from</span> <span class="nn">qiskit.circuit</span> <span class="kn">import</span> <span class="n">QuantumCircuit</span>
 <span class="kn">from</span> <span class="nn">qiskit.providers</span> <span class="kn">import</span> <span class="n">JobV1</span>
@@ -307,7 +308,6 @@
 
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire</span> <span class="kn">import</span> <span class="n">cqasm</span>
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.base_provider</span> <span class="kn">import</span> <span class="n">BaseProvider</span>
-<span class="kn">from</span> <span class="nn">qiskit_quantuminspire.utils</span> <span class="kn">import</span> <span class="n">run_async</span>
 
 
 <div class="viewcode-block" id="ExperimentFailedWarning">
@@ -396,7 +396,6 @@
             <span class="n">batch_job_success</span><span class="p">[</span><span class="n">idx</span><span class="p">]</span> <span class="o">=</span> <span class="n">qi_result</span><span class="o">.</span><span class="n">shots_done</span> <span class="o">&gt;</span> <span class="mi">0</span>
 
         <span class="k">if</span> <span class="n">failed_experiments</span><span class="p">:</span>
-
             <span class="n">warning_message</span> <span class="o">=</span> <span class="p">(</span>
                 <span class="sa">f</span><span class="s2">&quot;</span><span class="se">\n</span><span class="si">{</span><span class="n">Fore</span><span class="o">.</span><span class="n">YELLOW</span><span class="si">}</span><span class="s2">Some experiments </span><span class="si">{</span><span class="n">Fore</span><span class="o">.</span><span class="n">RED</span><span class="si">}</span><span class="s2">FAILED. &quot;</span>
                 <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">Fore</span><span class="o">.</span><span class="n">YELLOW</span><span class="si">}</span><span class="s2">You can view the detailed system messages </span><span class="se">\n</span><span class="s2">&quot;</span>
@@ -636,7 +635,6 @@
         <span class="p">}</span>
 
         <span class="k">for</span> <span class="n">circuit_data</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">circuits_run_data</span><span class="p">:</span>
-
             <span class="k">if</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">job_id</span> <span class="ow">in</span> <span class="n">failed_job_id_to_message</span><span class="p">:</span>
                 <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span> <span class="o">=</span> <span class="n">failed_job_id_to_message</span><span class="p">[</span><span class="n">circuit_data</span><span class="o">.</span><span class="n">job_id</span><span class="p">]</span>
 
