--- a/_modules/qiskit_quantuminspire/qi_provider.html
+++ b/_modules/qiskit_quantuminspire/qi_provider.html
@@ -258,10 +258,10 @@
 <span class="kn">from</span> <span class="nn">compute_api_client</span> <span class="kn">import</span> <span class="n">ApiClient</span><span class="p">,</span> <span class="n">BackendType</span><span class="p">,</span> <span class="n">BackendTypesApi</span><span class="p">,</span> <span class="n">PageBackendType</span>
 <span class="kn">from</span> <span class="nn">qi2_shared.client</span> <span class="kn">import</span> <span class="n">config</span>
 <span class="kn">from</span> <span class="nn">qi2_shared.pagination</span> <span class="kn">import</span> <span class="n">PageReader</span>
+<span class="kn">from</span> <span class="nn">qi2_shared.utils</span> <span class="kn">import</span> <span class="n">run_async</span>
 
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.base_provider</span> <span class="kn">import</span> <span class="n">BaseProvider</span>
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.qi_backend</span> <span class="kn">import</span> <span class="n">QIBackend</span>
-<span class="kn">from</span> <span class="nn">qiskit_quantuminspire.utils</span> <span class="kn">import</span> <span class="n">run_async</span>
 
 
 <div class="viewcode-block" id="QIProvider">
