deploy: 52f950ddb15c733a8e59264c50a7efbd544690fd

--- a/_modules/qiskit_quantuminspire/qi_backend.html
+++ b/_modules/qiskit_quantuminspire/qi_backend.html
@@ -265,6 +265,7 @@
 <span class="kn">from</span> <span class="nn">qiskit.transpiler</span> <span class="kn">import</span> <span class="n">CouplingMap</span><span class="p">,</span> <span class="n">Target</span>
 
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.mapping.instruction_mapping</span> <span class="kn">import</span> <span class="n">InstructionMapping</span>
+<span class="kn">from</span> <span class="nn">qiskit_quantuminspire.qi_instructions</span> <span class="kn">import</span> <span class="n">Asm</span>
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.qi_jobs</span> <span class="kn">import</span> <span class="n">QIJob</span>
 <span class="kn">from</span> <span class="nn">qiskit_quantuminspire.utils</span> <span class="kn">import</span> <span class="n">is_coupling_map_complete</span>
 
@@ -329,6 +330,8 @@
             <span class="n">num_qubits</span><span class="o">=</span><span class="n">backend_type</span><span class="o">.</span><span class="n">nqubits</span><span class="p">,</span>
             <span class="n">coupling_map</span><span class="o">=</span><span class="kc">None</span> <span class="k">if</span> <span class="n">coupling_map_complete</span> <span class="k">else</span> <span class="n">coupling_map</span><span class="p">,</span>
         <span class="p">)</span>
+
+        <span class="bp">self</span><span class="o">.</span><span class="n">_target</span><span class="o">.</span><span class="n">add_instruction</span><span class="p">(</span><span class="n">Asm</span><span class="p">())</span>
 
     <span class="k">def</span> <span class="nf">__repr_pretty__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">p</span><span class="p">:</span> <span class="n">PrettyPrinter</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">p</span><span class="o">.</span><span class="n">pprint</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;QIBackend(name=</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">, id=</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">id</span><span class="si">}</span><span class="s2">)&quot;</span><span class="p">)</span>
