--- a/genindex.html
+++ b/genindex.html
@@ -260,6 +260,10 @@
   <h2>A</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_instructions.Asm">Asm (class in qiskit_quantuminspire.qi_instructions)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBackend.available">available (qiskit_quantuminspire.qi_backend.QIBackend property)</a>
 </li>
     </ul></td>
@@ -394,6 +398,8 @@
 </li>
           <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.qi_backend">qiskit_quantuminspire.qi_backend</a>
 </li>
+          <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.qi_instructions">qiskit_quantuminspire.qi_instructions</a>
+</li>
           <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.qi_jobs">qiskit_quantuminspire.qi_jobs</a>
 </li>
           <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.qi_provider">qiskit_quantuminspire.qi_provider</a>
@@ -496,6 +502,13 @@
 
         <ul>
           <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.qi_backend">module</a>
+</li>
+        </ul></li>
+        <li>
+    qiskit_quantuminspire.qi_instructions
+
+        <ul>
+          <li><a href="api/qiskit_quantuminspire.html#module-qiskit_quantuminspire.qi_instructions">module</a>
 </li>
         </ul></li>
         <li>
