--- a/_modules/qiskit_quantuminspire/cqasm.html
+++ b/_modules/qiskit_quantuminspire/cqasm.html
@@ -305,6 +305,8 @@
             <span class="c1"># Opensquirrel does not support multi-qubit barriers.</span>
             <span class="k">for</span> <span class="n">qubit</span> <span class="ow">in</span> <span class="n">circuit_instruction</span><span class="o">.</span><span class="n">qubits</span><span class="p">:</span>
                 <span class="n">_add_instruction</span><span class="p">(</span><span class="n">builder</span><span class="p">,</span> <span class="n">CircuitInstruction</span><span class="p">(</span><span class="n">operation</span><span class="o">=</span><span class="n">operation</span><span class="p">,</span> <span class="n">qubits</span><span class="o">=</span><span class="p">[</span><span class="n">qubit</span><span class="p">]))</span>
+        <span class="k">elif</span> <span class="n">name</span> <span class="o">==</span> <span class="s2">&quot;asm&quot;</span><span class="p">:</span>
+            <span class="nb">getattr</span><span class="p">(</span><span class="n">builder</span><span class="p">,</span> <span class="n">name</span><span class="p">)(</span><span class="o">*</span><span class="n">operation</span><span class="o">.</span><span class="n">params</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">_add_instruction</span><span class="p">(</span><span class="n">builder</span><span class="p">,</span> <span class="n">circuit_instruction</span><span class="p">)</span>
 
