deploy: 2141a7d3d00f94fcbe7baad7d0565012ac7bf6da

--- a/_modules/qiskit_quantuminspire/qi_backend.html
+++ b/_modules/qiskit_quantuminspire/qi_backend.html
@@ -405,6 +405,7 @@
 
 <span class="sd">        Args:</span>
 <span class="sd">            run_input: A single or list of Qiskit QuantumCircuit objects or hybrid algorithms.</span>
+<span class="sd">            **options: Execution options (shots, memory, etc.)</span>
 
 <span class="sd">        Returns:</span>
 <span class="sd">            QIJob: A reference to the batch job that was submitted.</span>
