deploy: 1f5964b481f5460ad0b4fde97afde7fd8714860a

--- a/genindex.html
+++ b/genindex.html
@@ -376,6 +376,8 @@
 </li>
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBaseBackend.max_shots">max_shots (qiskit_quantuminspire.qi_backend.QIBaseBackend property)</a>
 </li>
+        <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBackend.message">message (qiskit_quantuminspire.qi_backend.QIBackend property)</a>
+</li>
         <li>
     module
 
