--- a/_modules/qiskit_quantuminspire/qi_backend.html
+++ b/_modules/qiskit_quantuminspire/qi_backend.html
@@ -389,6 +389,14 @@
         <span class="n">backend_type</span><span class="p">:</span> <span class="n">BackendType</span> <span class="o">=</span> <span class="n">run_async</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_get_backend_type</span><span class="p">())</span>
         <span class="k">return</span> <span class="n">backend_type</span><span class="o">.</span><span class="n">status</span>
 
+    <span class="nd">@property</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">message</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
+        <span class="n">backend_type</span><span class="p">:</span> <span class="n">BackendType</span> <span class="o">=</span> <span class="n">run_async</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_get_backend_type</span><span class="p">())</span>
+        <span class="n">messages</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span>
+        <span class="k">for</span> <span class="n">backend_name</span> <span class="ow">in</span> <span class="n">backend_type</span><span class="o">.</span><span class="n">messages</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
+            <span class="n">messages</span> <span class="o">+=</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">backend_name</span><span class="si">}</span><span class="s2">: </span><span class="si">{</span><span class="n">backend_type</span><span class="o">.</span><span class="n">messages</span><span class="p">[</span><span class="n">backend_name</span><span class="p">]</span><span class="o">.</span><span class="n">content</span><span class="si">}</span><span class="se">\n</span><span class="s2">&quot;</span>
+        <span class="k">return</span> <span class="n">messages</span><span class="o">.</span><span class="n">rstrip</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)</span>
+
     <span class="k">async</span> <span class="k">def</span><span class="w"> </span><span class="nf">_get_backend_type</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">BackendType</span><span class="p">:</span>
         <span class="k">async</span> <span class="k">with</span> <span class="n">ApiClient</span><span class="p">(</span><span class="n">config</span><span class="p">())</span> <span class="k">as</span> <span class="n">client</span><span class="p">:</span>
             <span class="n">backend_types_api</span> <span class="o">=</span> <span class="n">BackendTypesApi</span><span class="p">(</span><span class="n">client</span><span class="p">)</span>
